--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+        "sass": "^1.87.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
 	},
@@ -24,5 +25,11 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@zerodevx/svelte-toast": "^0.9.6",
+		"axios": "^1.12.2",
+		"jwt-decode": "^4.0.0",
+		"universal-cookie": "^8.0.1"
 	}
 }
