--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ password-hash = "0.5.0"
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "sqlite"] }
 time = "0.3.43"
 thiserror = "1.0.69"
+async-trait = "0.1.89"
