--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rocket = "0.5.1"
+rocket = { version = "0.5.1", features = ["json"] }
 rocket_cors = "0.6"
 rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }  # Rocket의 DB 풀
 serde = { version = "1.0.225", features = ["derive"] }
