--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "sqlite"] }
 time = "0.3.43"
 thiserror = "1.0.69"
 async-trait = "0.1.89"
+
+# JWT
+jsonwebtoken = "9.3.1"
+chrono = "0.4.39"
