--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ async-trait = "0.1.89"
 jsonwebtoken = "9.3.1"
 chrono = "0.4.39"
 uuid = { version = "1.18.1", features = ["v4"] }
+
+lazy_static = "1.5.0"
+regex = "1.11.2"
+validator = {version = "0.20.0", features = ["derive"] }
